tests/programs/valid/NoFinalFieldExample.java
public class NoFinalFieldExample {
    int nonFinalField = 10;
    public NoFinalFieldExample() {

    }
}
